Updates to slides, and viewable formats.

--- a/pipelines_and_featureunions.ipynb
+++ b/pipelines_and_featureunions.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Scikit-Learn The Best Parts\n",
+    "## Isaac Lemon Laughlin\n",
+    "Lead Instructor, Principal Data Scientist\n",
+    "\n",
+    "[Galvanize Inc.](www.galvanize.com)\n",
+    "\n",
+    "[@lemonlaug](www.twitter.com/lemonlaug)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Agenda/Objectives\n",
     "1. What are Pipelines and FeatureUnions?\n",
@@ -14,7 +36,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# What are Pipelines and FeatureUnions?\n",
     "\n",
@@ -29,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -43,7 +69,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Why are Pipelines and FeatureUnions so great?\n",
     "* Encourage good habits like:\n",
@@ -59,7 +89,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Why are Pipelines and FeatureUnions so great?\n",
     "![CRISP-DM Process Diagram](images/440px-CRISP-DM_Process_Diagram.png)"
@@ -80,13 +114,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# How do they work?\n",
     "\n",
     "* Initialize with a list of (name, estimator) tuples.\n",
-    "* All but the last of these estimators must implement transform method.\n",
-    "* From the docs: \"Calling fit on the pipeline is the same as calling fit on each estimator in turn, transform the input and pass it on to the next step. The pipeline has all the methods that the last estimator in the pipeline has, i.e. if the last estimator is a classifier, the Pipeline can be used as a classifier. If the last estimator is a transformer, again, so is the pipeline.\""
+    "* All but the last of these estimators must implement `transform` method.\n",
+    "* From the docs: <blockquote>Calling fit on the pipeline is the same as calling fit on each estimator in turn, transform the input and pass it on to the next step. The pipeline has all the methods that the last estimator in the pipeline has, i.e. if the last estimator is a classifier, the Pipeline can be used as a classifier. If the last estimator is a transformer, again, so is the pipeline.</blockquote>"
    ]
   },
   {
@@ -95,7 +133,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -125,9 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 237,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -150,7 +191,7 @@
        " 'transform']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,30 +201,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'reduce_dim__n_components': 12, 'svm__kernel': 'linear'}"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.grid_search import GridSearchCV\n",
+    "#Grid searching!\n",
+    "params = {'reduce_dim__n_components':[1,5,10,12,15,20],\n",
+    "         'svm__kernel':['linear', 'rbf']}\n",
+    "gs = GridSearchCV(clf, param_grid=params)\n",
+    "#Random data\n",
+    "from sklearn.datasets import make_classification\n",
+    "gs.fit(*make_classification())\n",
+    "gs.best_params_"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "So our pipeline object has chained two estimators together and given us a single consistent interface for both. It turns out that it's very powerful to be able to think of our complex, multi-step model as a single model. Especially when it comes to CV, which because we do not assume independence of our parameters requires us to search all parameters together."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# 4. Writing custom transformers\n",
-    "`sklearn` implements lots of good transformers, there are infinitely many more we may want to have so we'll often want to write our own.\n",
-    "\n",
-    "## The basics:"
+    "`sklearn` implements lots of good transformers, there are infinitely many more we may want to have so we'll often want to write our own."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 140,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
-   "outputs": [],
    "source": [
+    "```python\n",
     "from sklearn.base import TransformerMixin, BaseEstimator\n",
     "class MyTransformer(TransformerMixin, BaseEstimator):\n",
     "    \"\"\"Recommended signature for a custom transformer.\n",
@@ -201,7 +282,20 @@
     "        args or **kwargs.\n",
     "        \"\"\"\n",
     "        pass\n",
-    "    \n",
+    "    ...\n",
+    "```    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```python\n",
+    "...\n",
     "    def fit(self, X, y):\n",
     "        \"\"\"Recommended signature for custom transformer's\n",
     "        fit method.\n",
@@ -216,7 +310,20 @@
     "        \"\"\"\n",
     "        #You have to return self, so we can chain!\n",
     "        return self\n",
-    "    \n",
+    "... \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```python\n",
+    "...   \n",
     "    def transform(self, X):\n",
     "        \"\"\"Recommended signature for custom transformer's\n",
     "        transform method.\n",
@@ -227,12 +334,17 @@
     "        \"\"\"\n",
     "        #Do transforms.\n",
     "        #transformed = foo(X)\n",
-    "        return transformed"
+    "        return transformed\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Practice:\n",
     "\n",
@@ -265,7 +377,10 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -289,7 +404,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -329,7 +447,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Feature Union\n",
     "\n",
@@ -346,9 +468,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 242,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import pandas as pd\n",
+    "\n",
+    "class WordCounter(BaseEstimator, TransformerMixin):\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        split = np.vectorize(lambda x: len(x.split()))\n",
+    "        return split(X)[:,np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -443,7 +591,7 @@
        "2  0.36043  0.36043  0.36043  0.212876  0.000000  9.0  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,18 +601,6 @@
     "          \"What is your favorite color?\",\n",
     "          \"What is the airspeed velocity of an unladen swallow?\"]\n",
     "\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "class WordCounter(BaseEstimator, TransformerMixin):\n",
-    "    def fit(self, X, y=None):\n",
-    "        return self\n",
-    "    \n",
-    "    def transform(self, X):\n",
-    "        split = np.vectorize(lambda x: len(x.split()))\n",
-    "        return split(X)[:,np.newaxis]\n",
-    "\n",
     "fu = FeatureUnion([('tfidf', TfidfVectorizer()),\n",
     "                  ('counter', WordCounter())])\n",
     "\n",
@@ -473,13 +609,214 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Notes/Direction\n",
+    "\n",
+    "## Efficiency\n",
+    "Some grid search steps may duplicate a lot of work by fitting/transforming the same data repeatedly. Caching may be forthcoming.\n",
+    "\n",
+    "## Inverse Transforms\n",
+    "If implemented, can be used.\n",
+    "\n",
+    "## Post-processing/transformations of y.\n",
+    "Not currently available.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  data/Train.zip\n",
+      "  inflating: Train.csv               \n"
+     ]
+    }
+   ],
+   "source": [
+    "!unzip data/Train.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Practice\n",
+    "\n",
+    "Putting it all together: creating a matrix of heterogeneous data types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>MachineID</th>\n",
+       "      <th>ModelID</th>\n",
+       "      <th>datasource</th>\n",
+       "      <th>auctioneerID</th>\n",
+       "      <th>YearMade</th>\n",
+       "      <th>MachineHoursCurrentMeter</th>\n",
+       "      <th>UsageBand</th>\n",
+       "      <th>saledate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Undercarriage_Pad_Width</th>\n",
+       "      <th>Stick_Length</th>\n",
+       "      <th>Thumb</th>\n",
+       "      <th>Pattern_Changer</th>\n",
+       "      <th>Grouser_Type</th>\n",
+       "      <th>Backhoe_Mounting</th>\n",
+       "      <th>Blade_Type</th>\n",
+       "      <th>Travel_Controls</th>\n",
+       "      <th>Differential_Type</th>\n",
+       "      <th>Steering_Controls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1139246</td>\n",
+       "      <td>66000</td>\n",
+       "      <td>999089</td>\n",
+       "      <td>3157</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>11/16/2006 0:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Conventional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1139248</td>\n",
+       "      <td>57000</td>\n",
+       "      <td>117657</td>\n",
+       "      <td>77</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>4640.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>3/26/2004 0:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Conventional</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 53 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SalesID  SalePrice  MachineID  ModelID  datasource  auctioneerID  YearMade  \\\n",
+       "0  1139246      66000     999089     3157         121           3.0      2004   \n",
+       "1  1139248      57000     117657       77         121           3.0      1996   \n",
+       "\n",
+       "   MachineHoursCurrentMeter UsageBand         saledate        ...         \\\n",
+       "0                      68.0       Low  11/16/2006 0:00        ...          \n",
+       "1                    4640.0       Low   3/26/2004 0:00        ...          \n",
+       "\n",
+       "  Undercarriage_Pad_Width Stick_Length Thumb Pattern_Changer Grouser_Type  \\\n",
+       "0                     NaN          NaN   NaN             NaN          NaN   \n",
+       "1                     NaN          NaN   NaN             NaN          NaN   \n",
+       "\n",
+       "  Backhoe_Mounting Blade_Type Travel_Controls Differential_Type  \\\n",
+       "0              NaN        NaN             NaN          Standard   \n",
+       "1              NaN        NaN             NaN          Standard   \n",
+       "\n",
+       "  Steering_Controls  \n",
+       "0      Conventional  \n",
+       "1      Conventional  \n",
+       "\n",
+       "[2 rows x 53 columns]"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Data from: https://www.kaggle.com/c/bluebook-for-bulldozers\n",
+    "df = pd.read_csv('data/Train.zip')\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Practice\n",
+    "\n",
+    "Here are some suggested transformers to use in building your pipeline:\n",
+    "\n",
+    "| Column | Transformer | Notes |\n",
+    "| ------ | ----------- | ----- |\n",
+    "| `UsageBand` | `sklearn.preprocessing.OneHotEncoder` | |\n",
+    "| `YearMade` | `sklearn.preprocessing.Imputer` | May want to also add a dummy column noting which rows are affected |\n",
+    "| `fiProductClassDesc` | `sklearn.preprocessing.CountVectorizer` | You may ultimately want to reduce dimensionality of this using NMF or PCA. | \n",
+    "| `State` | `sklearn.preprocessing.OneHotEncoder` | |\n",
+    "| `YearMade`, `SaleDate` | Create a custom transformer to compute the age at sale. | |\n",
+    "| `SalePrice` | Create a custom transformer that takes the K most recent sales within a ModelID | Beware alignment/target leakage. Use `GroupBy.transform(lambda x: x.ffill)`. This is delicate, so feel free to ask for a hint. |\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
