Minor tweaks to slides.

--- a/pipelines_and_featureunions.ipynb
+++ b/pipelines_and_featureunions.ipynb
@@ -22,7 +22,43 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Requirements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.17.1'"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -31,6 +67,7 @@
     "1. Why should I care?\n",
     "1. Basic example of how they work.\n",
     "1. Best practices for writing custom Transformers.\n",
+    "1. Get one hairy example under our belts.\n",
     "1. Note some of the weaknesses and forthcoming features."
    ]
   },
