Updating with FeatureUnion practice.

--- a/pipelines_and_featureunions.ipynb
+++ b/pipelines_and_featureunions.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -643,6 +643,61 @@
     "\n",
     "#Pretty display of the output.\n",
     "pd.DataFrame(fu.fit_transform(corpus).todense())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Practice\n",
+    "\n",
+    "Write a feature union that takes a single-vector as input and returns 3 columns corresponding to the square-root transformation, the identity transformation, and the square transformation.\n",
+    "\n",
+    "_Hint:_ `sklearn.preprocessing.FunctionTransformer` takes a function as an argument and converts it to a simple Transformer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.11021486]\n",
+      " [ 0.64792271]\n",
+      " [ 0.19943493]\n",
+      " [ 0.8543808 ]\n",
+      " [ 0.71626191]]\n",
+      "[[ 0.33198624  0.11021486  0.01214732]\n",
+      " [ 0.80493646  0.64792271  0.41980384]\n",
+      " [ 0.44658139  0.19943493  0.03977429]\n",
+      " [ 0.92432722  0.8543808   0.72996655]\n",
+      " [ 0.84632258  0.71626191  0.51303113]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "from sklearn.pipeline import FeatureUnion\n",
+    "\n",
+    "X = np.random.random((100,1))\n",
+    "\n",
+    "fu = FeatureUnion([('sqrt',FunctionTransformer(np.sqrt)),\n",
+    "                  ('identity',FunctionTransformer()),\n",
+    "                  ('square', FunctionTransformer(lambda x: x**2))])\n",
+    "print(X[:5])\n",
+    "print(fu.fit_transform(X)[:5])"
    ]
   },
   {
