Updating note about state in transform method.

--- a/pipelines_and_featureunions.ipynb
+++ b/pipelines_and_featureunions.ipynb
@@ -85,7 +85,7 @@
     "* Estimators might include models, transformations etc.\n",
     "* `FeatureUnion` takes calls estimators which returns columns in parallel and `np.hstack`s the results together.\n",
     "* `Pipeline` Applies a sequence of transforms in series.\n",
-    "* They can be used together."
+    "* They can (and should) be used together."
    ]
   },
   {
@@ -98,7 +98,7 @@
    "source": [
     "# The Best Part of `sklearn`\n",
     "\n",
-    "* Sub-best parts of `sklearn`\n",
+    "* Other parts of `sklearn`\n",
     " * Supervised learning\n",
     " * Unsupervised learning\n",
     " * Model selection and evaluation"
@@ -119,6 +119,9 @@
     " * avoiding target-leakage by not accepting information about y in `transform`.\n",
     " * object orientedness\n",
     "* Promotes modeling choices to parameters\n",
+    "    * Transformation to linearize a feature\n",
+    "    * Handling missing values\n",
+    "    * Constructing features\n",
     "* Readability\n",
     "    * Separates implementation details from general approach.\n",
     "* Efficiency"
@@ -365,7 +368,7 @@
     "        \"\"\"Recommended signature for custom transformer's\n",
     "        transform method.\n",
     "        \n",
-    "        Use state (if any) to transform some X data. This X\n",
+    "        Transform some X data, optionally using state set in fit. This X\n",
     "        may be the same X passed to fit, but it may also be new data,\n",
     "        as in the case of a CV dataset. Both are treated the same.\n",
     "        \"\"\"\n",
