Adding item selector.

--- a/pipelines_and_featureunions.ipynb
+++ b/pipelines_and_featureunions.ipynb
@@ -79,7 +79,7 @@
     }
    },
    "source": [
-    "# What are Pipelines and FeatureUnions?\n",
+    "# 1. What are Pipelines and FeatureUnions?\n",
     "\n",
     "* Method for chaining multiple estimators into a single one.\n",
     "* Estimators might include models, transformations etc.\n",
@@ -112,7 +112,7 @@
     }
    },
    "source": [
-    "# Why are Pipelines and FeatureUnions so great?\n",
+    "# 2. Why are Pipelines and FeatureUnions so great?\n",
     "* Encourage good habits like:\n",
     " * separation of concerns\n",
     "     * cross-validation, development/computation\n",
@@ -135,7 +135,7 @@
     }
    },
    "source": [
-    "# Why are Pipelines and FeatureUnions so great?\n",
+    "# 2. Why are Pipelines and FeatureUnions so great?\n",
     "![CRISP-DM Process Diagram](images/440px-CRISP-DM_Process_Diagram.png)"
    ]
   },
@@ -160,7 +160,7 @@
     }
    },
    "source": [
-    "# How do they work?\n",
+    "# 3. How do they work?\n",
     "\n",
     "* Initialize with a list of (name, estimator) tuples.\n",
     "* All but the last of these estimators must implement `transform` method.\n",
@@ -755,7 +755,7 @@
     }
    },
    "source": [
-    "# Practice\n",
+    "# 5. Practice\n",
     "\n",
     "Putting it all together: creating a matrix of heterogeneous data types."
    ]
@@ -912,6 +912,66 @@
     "| `SalePrice` | Create a custom transformer that takes the K most recent sales within a ModelID | Beware alignment/target leakage. Use `GroupBy.transform(lambda x: x.ffill)`. This is delicate, so feel free to ask for a hint. |\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#This is use\n",
+    "class ItemSelector(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"For data grouped by feature, select subset of data at a provided key.\n",
+    "\n",
+    "    The data is expected to be stored in a 2D data structure, where the first\n",
+    "    index is over features and the second is over samples.  i.e.\n",
+    "\n",
+    "    >> len(data[key]) == n_samples\n",
+    "\n",
+    "    Please note that this is the opposite convention to sklearn feature\n",
+    "    matrixes (where the first index corresponds to sample).\n",
+    "\n",
+    "    ItemSelector only requires that the collection implement getitem\n",
+    "    (data[key]).  Examples include: a dict of lists, 2D numpy array, Pandas\n",
+    "    DataFrame, numpy record array, etc.\n",
+    "\n",
+    "    >> data = {'a': [1, 5, 2, 5, 2, 8],\n",
+    "               'b': [9, 4, 1, 4, 1, 3]}\n",
+    "    >> ds = ItemSelector(key='a')\n",
+    "    >> data['a'] == ds.transform(data)\n",
+    "\n",
+    "    ItemSelector is not designed to handle data grouped by sample.  (e.g. a\n",
+    "    list of dicts).  If your data is structured this way, consider a\n",
+    "    transformer along the lines of `sklearn.feature_extraction.DictVectorizer`.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    key : hashable, required\n",
+    "        The key corresponding to the desired value in a mappable.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, key):\n",
+    "        self.key = key\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, data_dict):\n",
+    "        return data_dict[self.key]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
