Updating static slides with latest changes.

--- a/pipelines_and_featureunions.ipynb
+++ b/pipelines_and_featureunions.ipynb
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -924,7 +924,9 @@
    },
    "outputs": [],
    "source": [
-    "#This is use\n",
+    "#This item selector, usage demonstrated at\n",
+    "# http://scikit-learn.org/stable/auto_examples/hetero_feature_union.html\n",
+    "# Can be important for practically implementing FeatureUnions.\n",
     "class ItemSelector(BaseEstimator, TransformerMixin):\n",
     "    \"\"\"For data grouped by feature, select subset of data at a provided key.\n",
     "\n",
